openwrt/service-openwrt.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwrt
  namespace: openwrt
spec:
  type: ExternalName
  externalName: 192.168.5.1
